<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    android:background="@color/snow">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context="com.martinez.steven.geometria.MainActivity"
        android:background="@color/snow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Titulo"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imagen"
                android:background="@drawable/fox"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Select_fig"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rCuadro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Cuadro"
                android:onClick="onRadioButtonClicked"
                />

            <RadioButton android:id="@+id/rCirculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Circulo"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton android:id="@+id/rTriangulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Triangulo"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton android:id="@+id/rCubo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Cubo"
                android:onClick="onRadioButtonClicked"
                />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Datos"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lado"
                android:inputType="number"
                android:id="@+id/elado"
                android:enabled="false"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/radio"
                android:inputType="number"
                android:id="@+id/eradio"
                android:enabled="false"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/base"
                android:inputType="number"
                android:id="@+id/ebase"
                android:enabled="false"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/altura"
                android:inputType="number"
                android:id="@+id/ealtura"
                android:enabled="false"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/resultado"
            android:gravity="center"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:id="@+id/bcalcular"
            android:onClick="calcular"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eresult"
            android:enabled="false"
            />

    </LinearLayout>


</ScrollView>
